                   ===============================
                   Release Notes for Samba 3.0.25c
                             Aug 20, 2007
                   ===============================

This is the fourth production release of the Samba 3.0.25 code 
base and is the version that servers should be run for for all 
current bug fixes.  

Major bug fixes included in Samba 3.0.25c are:

  o File sharing with Widows 9x clients.
  o Winbind running out of file descriptors due to stalled 
    child processes.
  o MS-DFS inter-operability issues.


######################################################################
Changes
#######

Changes since 3.0.25a
---------------------

o   Michael Adam <obnox@samba.org>
    * Fix incorrect log messages in tdbbackup.
    * Fix a bug in pwrite error detection in tdb_expand_file().


o   Jeremy Allison <jra@samba.org>
    * BUG 4711: Make cli_connect() return NT_STATUS codes.
    * Ensure we obey Unicode consortium restrictions.  Based on 
      patch from MORIYAMA Masayuki.
    * BUG 3204: Cope with stalled winbindd child processes and 
      prevent the parent winbindd process from running out of file  
      descriptors.
    * Fix realloc leak on failure case from Jim Meyering.
    * BUG 4759: Fix crash in ber_printf() caused invalid tag.
    * BUG 4763: Limit notify responses to client max buf size.      
    * BUG 4777: Doing a DFS traverse through a deep link could fail
      (not using explorer).
    * BUG 4779: Setting the allocation size updates the modified 
      time as a write does.
    * BUG 4308: Fix interaction with MS Excel and POSIX ACLs.
    * Fix POSIX unlink bug found by the Linux CIFS fs client.
    * Stop counting locks if we get a POSIX lock request.
    * Fix interaction between Linux CIFS fs client and Windows
      clients when the former tries to remove a file opened by the 
      latter.
    * Fix incorrect mapping of invalid resume names in FindNext 
      commands.